# webgpu-candles

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PERFORMANCE.md  README.md  TESTS.md  Trunk.toml  VOLUME_SYNC_FIXES.md  build.rs  colors.md  index.html  justfile  leptos-index.html  package.json  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: PIPELINES.md  authorize-pr.yml  benchmark.yml  build.yml  coverage.yml  deploy-monitor.yml  perf.yml  release.yml  test.yml
DOCS/: ARCHITECTURE.md  ECS_MIGRATION.md  FEATURES.md  PERFORMANCE.md  PIPELINES.md  REFACTORING_ROADMAP.md  TECHNICAL_SPEC.md  TESTS.md  VOLUME_SYNC_FIXES.md  WEBSOCKETS.md  colors.md
benches/: data_processing_benchmarks.rs  rendering_benchmarks.rs  webgpu_bench.rs
docs/: README.md  coverage.md  coverage_result.json  index.html  perf.md  perf_baseline.json  perf_result.json  price-chart-wasm-ab6a6618fc874ca8.js  price-chart-wasm-f5dc8e4986a39860.js  price-chart-wasm.js  price-chart-wasm_bg.wasm  version  version copy
docs/dev/: index.html  price-chart-wasm.js  price-chart-wasm_bg.wasm  version
docs/prod/: index.html
githooks/: pre-commit
path/: index.html
scripts/: compare_fps.py  notify_bot.py  parse_perf_log.py  send_to_bot.sh
scripts/tests/: test_notify_bot.py
src/: app.rs  candle_shader.wgsl  ecs.rs  event_utils.rs  global_state.rs  index.html  lib.rs  macros.rs  shader.wgsl  simple_shader.wgsl  time_utils.rs  view_state.rs
src/application/: chart_service.rs  coordinator.rs  mod.rs  use_cases.rs
src/application/use_cases/: mod.rs  render_chart.rs  unified_data_stream.rs
src/domain/: errors.rs  events.rs  logging.rs  mod.rs  state.rs
src/domain/chart/: entities.rs  mod.rs  services.rs  value_objects.rs
src/domain/market_data/: entities.rs  indicator_engine.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/ecs/: components.rs  mod.rs  systems.rs
src/infrastructure/: http.rs  mod.rs
src/infrastructure/http/: binance_rest_client.rs  mod.rs
src/infrastructure/rendering/: candle_renderer.rs  canvas_renderer.rs  gpu_structures.rs  mod.rs  webgpu.rs  webgpu_renderer.rs
src/infrastructure/rendering/renderer/: geometry.rs  initialization.rs  mod.rs  performance.rs  render_loop.rs  render_queue.rs
src/infrastructure/websocket/: binance_client.rs  binance_http_client.rs  client_handle.rs  dto.rs  mod.rs
src/presentation/: mod.rs  unified_wasm_api.rs  wasm_api.rs
tests/: README.md  abort_handle.rs  aggregated_ma.rs  aggregator.rs  auto_scroll.rs  axis_pan.rs  axis_zoom.rs  backfill_continuity.rs  candle_alignment.rs  candle_width_max_zoom.rs  chart_pan.rs  chart_positioning.rs  compare_fps_script.py  current_time.rs  dynamic_spacing.rs  ecs_chart_update.rs  ecs_full_pipeline.rs  ecs_global_integration.rs  ecs_signal_sync.rs  ecs_world.rs  geometry.rs  gpu_memory.rs  grid_vertices.rs  historical_ma_render.rs  history_backfill.rs  history_fetch.rs  indicator_engine.rs  indicator_perf.rs  indicator_vertices.rs  interval_restart.rs  logic_only.rs  market_data.rs  moving_average.rs  moving_average_overflow.rs  moving_average_updates.rs  msaa.rs  multi_symbol.rs  offset.rs  pan_offset.rs  pan_viewport.rs  (+35 more)
tests/fixtures/: candle_vertices.snap
tests/snapshots/: render_snapshot__red_canvas_snapshot.snap
