[package]
name = "price-chart-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 🦀 Leptos - Modern Rust Web Framework
leptos = { version = "0.6", features = ["csr"] }
leptos_dom = "0.6" 

# WebGPU & WASM Core
wgpu = "25.0.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "Window", "Document", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

# Error handling & utilities
thiserror = "1.0"
console_error_panic_hook = "0.1"
gloo = { version = "0.11", features = ["console", "timers", "events", "net", "utils"] }
gloo-net = { version = "0.5", features = ["websocket"] }
futures = "0.3"
derive_more = "0.99"
strum = { version = "0.26", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

# WebSocket & async
tokio = { version = "1", features = ["time"] }
wasm-bindgen-test = "0.3"

# 🚀 BENCHMARKS
[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "rendering_benchmarks"
harness = false
path = "benches/rendering_benchmarks.rs"

[[bench]]
name = "data_processing_benchmarks" 
harness = false
path = "benches/data_processing_benchmarks.rs"

[profile.bench]
debug = true
