[package]
name = "price-chart-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 🦀 Leptos - Modern Rust Web Framework
leptos = { version = "0.6", features = ["csr"] }

# WebGPU & WASM Core
wgpu = "25.0.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "Window", "Document", "Navigator", "Performance", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

# Utilities & macros
console_error_panic_hook = "0.1"
gloo = { version = "0.11", features = ["console", "timers", "events", "net", "utils"] }
gloo-net = { version = "0.5", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
derive_more = "0.99"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
insta = { version = "1.43.0", features = ["json"] }
serde_json = "1.0"
